--- a/app/src/main/res/menu/activity_home_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_home_navigation_drawer.xml
@@ -18,9 +18,9 @@
         android:id="@+id/group1"
         android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_tools"
-            android:icon="@drawable/ic_menu_tools"
-            android:title="@string/menu_tools" />
+            android:id="@+id/nav_profile"
+            android:icon="@drawable/account"
+            android:title="@string/menu_profile" />
     </group>
 
     <item android:title="@string/menu_group_login">
@@ -28,7 +28,7 @@
             <group android:checkableBehavior="single">
                 <item
                     android:id="@+id/nav_log_reg"
-                    android:icon="@drawable/account"
+                    android:icon="@drawable/login"
                     android:title="@string/menu_login_register" />
             </group>
         </menu>
