--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -29,12 +29,12 @@
     </fragment>
 
     <fragment
-        android:id="@+id/nav_tools"
+        android:id="@+id/nav_profile"
         android:name="com.example.sharetheride.HomeContentFragment_KK"
-        android:label="@string/menu_tools">
+        android:label="@string/menu_profile">
         <argument
             android:name="text_id"
-            android:defaultValue="@string/menu_tools"
+            android:defaultValue="@string/menu_profile"
             app:argType="reference" />
     </fragment>
 
