--- a/app/src/main/res/menu/activity_home_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_home_navigation_drawer.xml
@@ -5,13 +5,13 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_trips"
             android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_camera" />
+            android:title="@string/menu_trips" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_create_trip"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:title="@string/menu_create_trip" />
     </group>
 
     <group
