--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -4,23 +4,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav"
-    app:startDestination="@id/nav_camera">
+    app:startDestination="@id/nav_trips">
 
     <fragment
-        android:id="@+id/nav_camera"
+        android:id="@+id/nav_trips"
         android:name="com.example.sharetheride.HomeContentFragment"
-        android:label="@string/menu_camera"
+        android:label="@string/menu_trips"
         tools:layout="@layout/home_fragment">
         <argument
             android:name="text_id"
-            android:defaultValue="@string/menu_camera"
+            android:defaultValue="@string/menu_trips"
             app:argType="reference" />
     </fragment>
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_create_trip"
         android:name="com.example.sharetheride.HomeContentFragment"
-        android:label="@string/menu_gallery"
+        android:label="@string/menu_create_trip"
         tools:layout="@layout/home_fragment">
         <argument
             android:name="text_id"
