--- a/app/src/main/res/layout/trip_layout.xml
+++ b/app/src/main/res/layout/trip_layout.xml
@@ -75,7 +75,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:background="?android:attr/listDivider"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
