--- a/app/src/main/res/layout/item_my_trip.xml
+++ b/app/src/main/res/layout/item_my_trip.xml
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackgroundBorderless"
                 android:contentDescription="Delete Trip"
-                android:src="@android:drawable/ic_delete" />
+                android:src="@drawable/map_marker_remove" />
 
         </LinearLayout>
 
