--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,12 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.ShareTheRide" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primaryDark</item>
-        <item name="android:statusBarColor" >@android:color/transparent</item>
-        <item name="toolbarStyle">@style/Widget.MaterialComponents.Toolbar.PrimarySurface</item>
-        <item name="drawerArrowStyle">@style/AppTheme.DrawerArrowStyle</item>
-        <!-- Customize your light theme here. -->
+        <!-- <style name="Base.Theme.ShareTheRide" parent="Theme.MaterialComponents.Light.NoActionBar"> Material Design style-->
+           <item name="colorPrimary">@color/primary</item>
+           <item name="colorPrimaryDark">@color/primaryDark</item>
+           <item name="android:statusBarColor" >@android:color/transparent</item>
+           <item name="toolbarStyle">@style/Widget.MaterialComponents.Toolbar.PrimarySurface</item>
+           <item name="drawerArrowStyle">@style/AppTheme.DrawerArrowStyle</item>
+           <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
